--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,203 @@
 {
-  "extends": "next/core-web-vitals"
+    "root": true,
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+        "@typescript-eslint",
+        "import",
+        "react",
+        "no-only-tests",
+        "sort-keys-custom-order-fix"
+    ],
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:react-hooks/recommended",
+        "plugin:prettier/recommended",
+        "plugin:react/jsx-runtime",
+        "plugin:react/recommended"
+    ],
+    "env": {
+        "browser": true,
+        "es2021": true,
+        "node": true
+    },
+    "rules": {
+        // Allow use of console.error.
+        "no-console": [
+            "warn",
+            {
+                "allow": [
+                    "error"
+                ]
+            }
+        ],
+        // Lets typescript checks for it instead.
+        "no-unused-vars": "off",
+        // Allows of ts-ignores but it should not be overused.
+        "@typescript-eslint/ban-ts-comment": "off",
+        // Allows use of generic types but should be avoided if possible.
+        "@typescript-eslint/ban-types": [
+            "error",
+            {
+                "types": {
+                    "Function": false,
+                    "Object": false,
+                    "{}": false
+                }
+            }
+        ],
+        // Lets Typescript to infer return types.
+        "@typescript-eslint/explicit-module-boundary-types": "off",
+        // Sets custom ordering for interfaces and classes.
+        "@typescript-eslint/member-ordering": [
+            "error",
+            {
+                "classes": [
+                    "field",
+                    "constructor",
+                    "method"
+                ],
+                "default": {
+                    "order": "alphabetically-case-insensitive"
+                }
+            }
+        ],
+        // Allows use of empty function mainly used for tests.
+        "@typescript-eslint/no-empty-function": "on",
+        // Allows use of any but should be avoided if possible.
+        "@typescript-eslint/no-explicit-any": "off",
+        // Allows use of "!" to indicate that a value is not null/undefined.
+        "@typescript-eslint/no-non-null-assertion": "off",
+        // Allows use of "!" after optional chaining e.g. foo?.bar!.
+        "@typescript-eslint/no-non-null-asserted-optional-chain": "off",
+        // Checks if a variable is declared but not used.
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            {
+                "ignoreRestSiblings": true
+            }
+        ],
+        // https://github.com/import-js/eslint-plugin-import
+        // Forces custom import order via groups. Array is used to group imports together. Imports will also be separated by new lines for readability.
+        // Built-in are node imports such as fs, path, etc.  External are imports from node modules e.g. react, @mui, etc.
+        // Internal are non-relative imports from the project e.g. components, pages, etc.
+        // Parent, index, and sibling are relative imports e.g. "../Parent", ",", and "./Sibling".
+        // Type is for importing types from a module e.g. import type { SomeType } from "tools/types".
+        // We use custom path groups e.g. actions (grouped under internal) to separate and readability for the import.
+        "import/order": [
+            "error",
+            {
+                "alphabetize": {
+                    "caseInsensitive": true,
+                    "order": "asc"
+                },
+                "groups": [
+                    [
+                        "builtin",
+                        "external"
+                    ],
+                    "internal",
+                    [
+                        "parent",
+                        "index",
+                        "sibling"
+                    ],
+                    "type"
+                ],
+                "newlines-between": "always",
+                "pathGroups": [
+                    {
+                        "pattern": "{actions,actions/**}",
+                        "group": "internal",
+                        "position": "before"
+                    },
+                    {
+                        "pattern": "tools/constants/**",
+                        "group": "internal",
+                        "position": "before"
+                    },
+                    {
+                        "pattern": "{tools/urls,tools/urls/**}",
+                        "group": "internal",
+                        "position": "before"
+                    },
+                    {
+                        "pattern": "helpers/**",
+                        "group": "internal",
+                        "position": "before"
+                    },
+                    {
+                        "pattern": "components/**",
+                        "group": "internal",
+                        "position": "before"
+                    },
+                    {
+                        "pattern": "media/**",
+                        "group": "internal",
+                        "position": "after"
+                    }
+                ]
+            }
+        ],
+        // Allows using media without needing captions.
+        "jsx-a11y/media-has-caption": "off",
+        // Prevents using .only in tests.
+        "no-only-tests/no-only-tests": "error",
+        // Avoids needing to specific display names for components.
+        "react/display-name": "off",
+        // Forces component props to be sorted, rest props are ignored.
+        "react/jsx-sort-props": [
+            "error",
+            {
+                "ignoreCase": true
+            }
+        ],
+        // Used to sort members inside an import. Will ignore "type" keyword e.g. import { type A, b } from "components".
+        "sort-imports": [
+            "error",
+            {
+                "allowSeparatedGroups": true,
+                "ignoreCase": true,
+                "ignoreDeclarationSort": true,
+                "ignoreMemberSort": false
+            }
+        ],
+        // Forces object keys to be sorted, rest props are ignored (similar to 'sort-keys').
+        "sort-keys": "off",
+        "sort-keys-custom-order-fix/sort-keys-custom-order-fix": [
+            "error",
+            "custom",
+            {
+                "caseSensitive": false,
+                "natural": true,
+                "orderBy": "asc",
+                "order": [
+                    "xs",
+                    "sm",
+                    "md",
+                    "lg",
+                    "xl"
+                ]
+            }
+        ],
+        // Allow use of various characters like ">", """, "'", "}", etc.
+        "react/no-unescaped-entities": "off",
+        // We use prop interface to specify props.
+        "react/prop-types": "off",
+        // We use jsx transform (no need for import React).
+        "react/react-in-jsx-scope": "off"
+    },
+    "settings": {
+        // Lets import plugin know about non-relative imports
+        "import/resolver": {
+            "typescript": {
+                "project": "./tsconfig.json"
+            }
+        },
+        "react": {
+            "version": "detect"
+        }
+    }
 }
