--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint ./src --fix --cache --ext ts,tsx --max-warnings 0 && tsc --noEmit",
     "build": "next build && next export -o build",
-    "export": "next build && next export -o build"
+    "export": "next build && next export -o build",
+    "pre-commit": "lint-staged",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@emotion/cache": "^11.10.2",
@@ -44,6 +46,7 @@
     "eslint-plugin-sort-keys-custom-order-fix": "^0.1.1",
     "eslint-plugin-testing-library": "^5.6.0",
     "prettier": "^2.7.1",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "husky": "^8.0.0"
   }
 }
