--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "eslint-plugin-sort-keys": "^2.3.5",
     "eslint-plugin-sort-keys-custom-order-fix": "^0.1.1",
     "eslint-plugin-testing-library": "^5.6.0",
+    "husky": "^8.0.0",
     "prettier": "^2.7.1",
-    "typescript": "4.7.4",
-    "husky": "^8.0.0"
+    "typescript": "4.7.4"
   }
 }
